# PTR_mega_firmware

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  README.md  SYSVIEW_FreeRTOS.txt  build_all.bat  build_all.ps1  cmd_examples.txt  gdbinit  partitions-16mb.csv  partitions-8mb.csv  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old  sdkconfig_arecorder_v3_32m  sdkconfig_arecorder_v3_8m  sdkconfig_v0_8m  sdkconfig_v1_16m  sdkconfig_v1_32m  sdkconfig_v1_8m  sdkconfig_v1_8m 2  trace.bat
.github/workflows/: main.yml
components/AHRS/: AHRS.c  CMakeLists.txt
components/AHRS_driver/: AHRS_driver.c  CMakeLists.txt  KF_AltitudeAscent.c  quaternion.c
components/Analog_driver/: Analog_driver.c  CMakeLists.txt
components/Analog_driver/include/: Analog_driver.h
components/Analog_driver/ulp/: main_ulp_adc.c
components/BOARD/: BOARD.c  CMakeLists.txt
components/DataManager/: CMakeLists.txt  DataManager.c
components/Data_aggregator/: CMakeLists.txt  Data_aggregator.c
components/Detector/: CMakeLists.txt  Detector.c
components/FLASH_driver/: CMakeLists.txt  FLASH_driver.c
components/FS_driver/: CMakeLists.txt  FS_driver.c
components/FlightStateDetector/: CMakeLists.txt  FlightStateDetector.c
components/GNSS_driver/: CMakeLists.txt  GNSS_driver.c
components/HAL_SPI/: CMakeLists.txt  HAL_SPI.c
components/IGN_driver/: CMakeLists.txt  IGN_driver.c
components/LED_driver/: CMakeLists.txt  LED_driver.c
components/LIS331_driver/: CMakeLists.txt  LIS331_driver.c
components/LORA_driver/: CMakeLists.txt  LORA_driver.c
components/LSM6DS032_driver/: CMakeLists.txt  LSM6DS032_driver.c
components/LSM6DSO32_driver/: CMakeLists.txt  LSM.c  LSM6DSO32_driver.c  LSM6DSO32_fifo.c  log.txt
components/MMC5983MA_driver/: CMakeLists.txt  MMC5983MA_driver.c
components/Web_driver/: CMakeLists.txt  Web_driver.c  Web_driver_cmd.c  Web_driver_json.c  web_driver.c
components/Web_driver/data/: index.html  scripts.js  styles.css
components/Web_driver/include/: Web_driver.h  Web_driver_cmd.h  Web_driver_json.h  web_driver.h
components/Web_driver/www/: index.html  scripts.js  styles.css
lib/MS5607/: .piopm  (+5 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
profiles/: firmware_v0_8m  firmware_v1_16m  firmware_v1_32m  firmware_v1_8m 2
(+90 files in other folders)
