idf_component_register(SRCS "Analog_driver.c"
                    INCLUDE_DIRS "include"
                    REQUIRES driver esp_adc ulp BOARD)

#
# ULP support additions to component CMakeLists.txt.
#
# 1. The ULP app name must be unique (if multiple components use ULP).
# set(ulp_app_name main_ulp_adc)
#
# 2. Specify all C and Assembly source files.
#    Files should be placed into a separate directory (in this case, ulp/),
#    which should not be added to COMPONENT_SRCS.
# set(ulp_riscv_sources "ulp/main_ulp_adc.c")

#
# 3. List all the component source files which include automatically
#    generated ULP export file, ${ulp_app_name}.h:
# set(ulp_exp_dep_srcs "main.c")

#
# 4. Call function to build ULP binary and embed in project using the argument
#    values above.
# ulp_embed_binary(${ulp_app_name} "${ulp_riscv_sources}" "${ulp_exp_dep_srcs}")